css/style.css
/* ... */
.section-title {
  color: #000;
  font-size: 40px;
  font-weight: 900; }
  @media (max-width: 991.98px) {
    .section-title {
      font-size: 30px; } }

.position-relative {
  position: relative; }

.experience {
  position: absolute;
  bottom: -10px;
  right: -10px;
  background: #007bff;
  padding: 20px; }
  @media (max-width: 991.98px) {
    .experience {
      bottom: 0px;
      right: 0px; } }
  .experience span {
    display: block; }
  .experience .year {
    font-weight: 900;
    color: #fff;
    font-size: 3rem;
    letter-spacing: normal;
    line-height: 1.2; }
  .experience span {
    letter-spacing: .2em; }
  .experience .caption {
    color: #fff;
    letter-spacing: .4em;
    text-transform: uppercase; }

.footer-subscribe .btn {
  height: 43px; }

.feature-big h2 {
  font-size: 40px;
  font-weight: 900;
  margin-bottom: 30px; }

.author-box {
  -webkit-box-shadow: 0 5px 15px -2px rgba(0, 0, 0, 0.1);
  box-shadow: 0 5px 15px -2px rgba(0, 0, 0, 0.1);
  border-radius: 4px;
  padding: 20px;
  border: 1px solid #eee;
  border-left: 10px solid #4285f4; }
  .author-box *:last-child {
    margin-bottom: 0; }
  .author-box img {
    max-width: 50px; }
  .author-box blockquote {
    font-style: italic; }

.shadow {
  -webkit-box-shadow: 0 5px 15px -2px rgba(0, 0, 0, 0.1);
  box-shadow: 0 5px 15px -2px rgba(0, 0, 0, 0.1); }

.h-entry h2 a {
  color: #000;
  font-size: 30px; }

@media (max-width: 991.98px) {
  .site-logo {
    top: 0; } }

@media (max-width: 991.98px) {
  .main-menu {
    display: none !important; } }

.overlap-image-wrap {
  position: relative; }
  .overlap-image-wrap .image-1 {
    position: relative; }
  .overlap-image-wrap .image-2 {
    max-width: 250px;
    position: absolute;
    bottom: -50px;
    right: -50px;
    z-index: 99; }

.bg-image2 {
  background-size: cover;
  background-attachment: fixed;
  position: relative; }
  .bg-image2.overlay:before {
    content: "";
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    opacity: .7; }

.person {
  position: relative; }
  .person figure {
    position: relative;
    margin-bottom: 0; }
    .person figure:before {
      display: none;
      position: absolute;
      content: "";
      z-index: 1;
      left: 10px;
      top: 10px;
      right: 10px;
      bottom: 10px;
      border: 2px solid #4285f4;
      opacity: 1;
      visibility: visible;
      -webkit-transition: .3s all ease;
      -o-transition: .3s all ease;
      transition: .3s all ease; }
  .person h2 {
    font-size: 18px; }
  .person .bio-img {
    position: relative;
    text-align: center;
    overflow: hidden;
    margin-bottom: 30px; }
    .person .bio-img img {
      position: relative;
      -webkit-transition: .3s all ease-in-out;
      -o-transition: .3s all ease-in-out;
      transition: .3s all ease-in-out;
      -webkit-transform: scale(1);
      -ms-transform: scale(1);
      transform: scale(1); }
    .person .bio-img .social {
      z-index: 2;
      padding: 10px 0;
      width: 100%;
      position: absolute;
      bottom: 0%;
      -webkit-transform: translateY(100%);
      -ms-transform: translateY(100%);
      transform: translateY(100%);
      left: 0;
      -webkit-transition: .3s all ease;
      -o-transition: .3s all ease;
      transition: .3s all ease;
      background: #4285f4; }
      .person .bio-img .social a {
        display: inline-block;
        padding: 5px;
        color: #fff; }
  .person:hover img {
    -webkit-transform: scale(1.05);
    -ms-transform: scale(1.05);
    transform: scale(1.05); }
  .person:hover .social {
    bottom: 0;
    -webkit-transform: translateY(0%);
    -ms-transform: translateY(0%);
    transform: translateY(0%); }
  .person:hover figure:before {
    opacity: 0;
    visibility: hidden; }

.sub-title {
  display: block;
  text-transform: uppercase;
  letter-spacing: .1em;
  font-size: 12px;
  font-weight: 700;
  color: #4285f4;
  margin-bottom: 10px; }

/*PRELOADING------------ */
#overlayer {
  width: 100%;
  height: 100%;
  position: fixed;
  z-index: 7100;
  background: #fff;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0; }

.loader {
  z-index: 7700;
  position: fixed;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%); }

.form-subscribe .btn:hover, .form-subscribe .btn:active, .form-subscribe .btn:focus {
  background-color: #4285f4 !important;
  border-color: #4285f4 !important;
  color: #fff; }

  .get-started{
    color: white;
    background-color: #f02539;
  }

  .mobile-no{
    color: #000;
    font-size: 30px;
    font-weight: 900; 
  }

  .responsive-text{
    font-size:30px;
  }

 @media screen and (max-width: 600px) {
  .responsive-text{
    font-size:15px;
  }

  .address-text{
    font-size: 13px;
  }

  .mobile-no{
    font-size: 13px;
  }
}

